--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,12 @@
         font-family: sans-serif;
     }
 </style>
-
-
-
-<script>
-
-
-
-
-    function onSend(){
-        const messageToSend = document.getElementById('messageToSend').value;
-        document.getElementById('messageToSend').value = '';
-        console.log(messageToSend)
-    }
-</script>
-
-
-
-
-
-
-
-
 <script>
     let chats = [];
     let messages = [];
+    var socket = io.connect('http://localhost:3000');
+    socket.on('new_connect', (data)=>{console.log('HUZZAH!'); console.log(data)});
     function onLoad() {
-        //$.get("http://a7b61c0e.ngrok.io/chats", function(data, status){
         $.get("http://localhost:3000/chats", function(data, status){
             chats = data.chats;
             
@@ -51,7 +30,6 @@
         });
     }
     function onLoadMessages (id){
-        //$.get(`http://a7b61c0e.ngrok.io/messages/${id}`, function(data, status){
         $.get(`http://localhost:3000/${id}/messages`, function(data, status){
             messages = data.messages;
             
@@ -67,6 +45,12 @@
             document.getElementById('chat').innerHTML = messagesHtml
         });
     }
+    function onSend(){
+        const messageToSend = document.getElementById('messageToSend').value;
+        document.getElementById('messageToSend').value = '';
+        console.log(messageToSend)
+    }
+ 
 </script>
 
 
