--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,10 @@
         });
     }
     function onSend(){
+        var id = document.getElementById('chatId').innerHTML
+        var msg = document.getElementById('messageToSend').value
+
+        socket.emit('message', {user:null, chatId:id, message:msg});
         const messageToSend = document.getElementById('messageToSend').value;
         document.getElementById('messageToSend').value = '';
         console.log(messageToSend)
